--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.8",
     "react-native-dialog": "^9.3.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-image-viewing": "^0.2.2",
     "react-native-mime-types": "^2.3.0",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^4.9.2",
+    "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-simple-dialogs": "^1.5.0",
